# sudo-q

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.pre-commit-hooks/: check-performance.py
examples/: benchmark.py  generation.py  getting_started.py  solving.py
scripts/: check-performance.py  sync_versions.py  update_documentation.py  validate_puzzles.py
src/: sudoq.py
src/sudoq/: __init__.py  core.py  grid.py  protocols.py  unit.py
src/sudoq/generators/: __init__.py  generators.py  reducers.py
src/sudoq/solvers/: __init__.py  protocols.py  solvers.py  strategies.py
tests/: context.py  test_constructors.py  test_generation.py  test_iteration.py  test_loading.py  test_retrieval.py  test_solving.py  test_validation.py
tests/assets/hex-samples/: solved-1.txt
tests/assets/samples/: hard-1.csv  solved-1.csv  valid-1.csv  valid-2.csv
