[project]
name = "sudo-q"
version = "0.0.1"
description = "API to solve and generate sudoku boards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # runtime deps here, e.g. "fastapi", "pydantic", etc.
]

[tool.uv]
dev-dependencies = ["pre-commit>=4.2.0", "pytest>=8.4.1", "ruff>=0.12.3"]
