[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoq"
version = "0.0.2"
description = "API to solve and generate sudoku boards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["sudoq", "sudoq.solvers", "sudoq.generators"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
